--- a/style.css
+++ b/style.css
@@ -11,14 +11,15 @@ h1 {
     color: orange;
 }
 
-section {
+.flexable-container {
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 
 .half-width {
     width: 50%;
-    padding-left: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .half-width img {
@@ -38,4 +39,9 @@ section {
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
