--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 h1 {
     font-size: 50px;
 }
+h2{
+    font-size: 35px;
+}
 
 .orange-color {
     color: orange;
@@ -44,4 +47,31 @@ h1 {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image:url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 50px gray;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(54, 54, 163),rgb(48, 158, 158)) ;
+    border-image-slice: 1;
+}
+#full-stack-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(161, 161, 218),rgb(255, 0, 191)) ;
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
